# apandas

./: .buildinfo  README.md  README.rst  changelog.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: acolumn.doctree  aframe.doctree  afunction.doctree  ameta.doctree  aseries.doctree
.github/workflows/: builddoc.yaml
_sources/api/: ameta.rst.txt  aseries.rst.txt
apandas/: __init__.py  acolumn.py  aframe.py
api/: acolumn.html  aframe.html  afunction.html  ameta.html  aseries.html
doc/: conf.py  index.rst
doc/api/: acolumn.rst  aframe.rst  afunction.rst  aseries.rst
tests/: test_aframe.py  test_afunction.py  test_apandas.py  test_aseries.py  tests.py
