[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1"]

[project]
name = "apandas"
authors = [
    { name = "Tomas Protivinsky", email = "tomas.protivinsky@gmail.com" },
]
readme = "README.rst"
requires-python = ">=3.7"
dynamic = ["version", "description"]
keywords = [
    "pandas",
    "analytics",
    "typing",
    "computation",
    "dataframe",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy >= 1.19.0",
    "pandas >= 1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-cov >= 3.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 75"

[tool.coverage.run]
source = ["apandas"]

[project.urls]
Homepage = "https://github.com/protivinsky/apandas"
Documentation = "https://protivinsky.github.io/apandas"

